# gogol

gogol-bigquery/: gogol-bigquery.cabal
gogol-bigtableadmin/: gogol-bigtableadmin.cabal
gogol-chat/: gogol-chat.cabal
gogol-cloudsearch/: gogol-cloudsearch.cabal
gogol-compute/: gogol-compute.cabal
gogol-containerbuilder/: gogol-containerbuilder.cabal
gogol-dataflow/: gogol-dataflow.cabal
gogol-dataproc/: gogol-dataproc.cabal
gogol-dfareporting/: gogol-dfareporting.cabal
gogol-dialogflow/: gogol-dialogflow.cabal
gogol-doubleclick-bids/: gogol-doubleclick-bids.cabal
gogol-firebasehosting/: gogol-firebasehosting.cabal
gogol-games/: gogol-games.cabal
gogol-jobs/: gogol-jobs.cabal
gogol-logging/: gogol-logging.cabal
gogol-monitoring/: gogol-monitoring.cabal
gogol-people/: gogol-people.cabal
gogol-redis/: gogol-redis.cabal
gogol-resourcemanager/: gogol-resourcemanager.cabal
gogol-run/: gogol-run.cabal
gogol-servicemanagement/: gogol-servicemanagement.cabal
gogol-servicenetworking/: gogol-servicenetworking.cabal
gogol-shopping-content/: gogol-shopping-content.cabal
gogol-spanner/: gogol-spanner.cabal
gogol-sqladmin/: gogol-sqladmin.cabal
gogol-vault/: gogol-vault.cabal
gogol-youtube/: gogol-youtube.cabal
