name:                  gogol-resourcemanager
version:               0.5.0
synopsis:              Google Cloud Resource Manager SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Creates, reads, and updates metadata for Google Cloud Platform resource
    containers.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v3@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.Resource.CloudResourceManager.Liens.Create
        , Network.Google.Resource.CloudResourceManager.Liens.Delete
        , Network.Google.Resource.CloudResourceManager.Liens.Get
        , Network.Google.Resource.CloudResourceManager.Liens.List
        , Network.Google.Resource.CloudResourceManager.Operations.Get
        , Network.Google.Resource.CloudResourceManager.TagBindings.Create
        , Network.Google.Resource.CloudResourceManager.TagBindings.Delete
        , Network.Google.Resource.CloudResourceManager.TagBindings.List
        , Network.Google.Resource.CloudResourceManager.TagKeys.Create
        , Network.Google.Resource.CloudResourceManager.TagKeys.Delete
        , Network.Google.Resource.CloudResourceManager.TagKeys.Get
        , Network.Google.Resource.CloudResourceManager.TagKeys.GetIAMPolicy
        , Network.Google.Resource.CloudResourceManager.TagKeys.List
        , Network.Google.Resource.CloudResourceManager.TagKeys.Patch
        , Network.Google.Resource.CloudResourceManager.TagKeys.SetIAMPolicy
        , Network.Google.Resource.CloudResourceManager.TagKeys.TestIAMPermissions
        , Network.Google.Resource.CloudResourceManager.TagValues.Create
        , Network.Google.Resource.CloudResourceManager.TagValues.Delete
        , Network.Google.Resource.CloudResourceManager.TagValues.Get
        , Network.Google.Resource.CloudResourceManager.TagValues.GetIAMPolicy
        , Network.Google.Resource.CloudResourceManager.TagValues.List
        , Network.Google.Resource.CloudResourceManager.TagValues.Patch
        , Network.Google.Resource.CloudResourceManager.TagValues.SetIAMPolicy
        , Network.Google.Resource.CloudResourceManager.TagValues.TestIAMPermissions
        , Network.Google.ResourceManager
        , Network.Google.ResourceManager.Types

    other-modules:
          Network.Google.ResourceManager.Types.Product
        , Network.Google.ResourceManager.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
